--- a/templates/product_details.html
+++ b/templates/product_details.html
@@ -20,7 +20,7 @@
                                 <td class="cart-table-quantity"><b>$ {{ item.price }}</b></td>
                                 <td>&nbsp;</td>
                                 <td class="cart-table-quantity">
-                                    <label for="quantity">Qty:</label>
+                                    <label for="quantity">Session:</label>
                                     <input type="number" id="quantity" name="quantity" min="1" style="width: 50px;">
                                 <td>&nbsp;</td>
                                 <td class="cart-table-quantity">
